# Assemblage

./: Cargo.toml  biome definition docs.md
derg_file_stuff/: Binary model format.txt
derg_file_stuff/models/: Assemblage shapes.blend  Assemblage shapes.blend1  voxel_shapes.fbx
derg_file_stuff/models/derg_export_plugin/: export_derg.py
src/: Binary model format.txt  Model format.txt  camera_controller.rs  input_manager.rs  main.rs  state.rs  time.rs
src/asset_types/: asset.rs  mesh.rs
src/derg_export_plugin/: __init__.py
src/ecs/: mod.rs  world.rs
src/ecs/components/: camera.rs  mod.rs  physics_components.rs  player_components.rs  rendering_components.rs  transformation_components.rs
src/ecs/entities/: entity_types.rs
src/ecs/systems/: camera_systems.rs  mod.rs  physics_systems.rs  player_controller.rs  render_systems.rs
src/noise/: simplex.rs
src/physics/: mod.rs  physics_scene.rs
src/rendering/: camera.rs  material.rs  mesh.rs  mod.rs  render_pass_data.rs  texture.rs  vertex.rs
src/resources/biome_profiles/: plains.json
src/resources/biomes/biome_profiles/: plains.fur
src/resources/biomes/imports/: global_variables.json
src/resources/decorations/: grass.json  grass_root.json
src/resources/voxel_profiles/: grass.json  gravel.json  slime.json  stone.json
src/shaders/: noise_compute.wgsl  shader.wgsl
src/voxels/: biome_profile.rs  mod.rs  voxel_data.rs  voxel_mesh.rs  voxel_registry.rs  voxel_scene.rs  voxel_shapes.rs
