[package]
name = "graphics-test"
version = "0.1.0"
edition = "2021"

[dependencies]
image = "0.23"
winit = "0.26"
cgmath = "0.18"
env_logger = "0.9"
log = "0.4"
wgpu = "0.12"
pollster = "0.2"
bytemuck = { version = "1.4", features = [ "derive" ] }
anyhow = "1.0"
glam = "0.20.2"
rand = "0.8.5"
rayon = "1.5.1"
simdnoise = "3.1.6"
tokio = { version = "1", features = ["full"] }
mimalloc = { version = "0.1.28", default-features = false }
flume = "0.10.11"
lazy_static = "1.4.0"
dashmap = "5.1"
ahash = "0.7"
legion = "0.4.0"
nalgebra = { version = "0.30.1", features = [ "convert-glam020" ] }
rapier3d = { version = "*", features = [ "simd-stable" ] }
parking_lot = "0.12.0"